[package]
name = "AoC2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "bin/day1/day1.rs"

[[bin]]
name = "day2" 
path = "bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "bin/day3/day3.rs"

[[bin]]
name = "day4"
path = "bin/day4/day4.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
