[package]
name = "AoC2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "bin/day1/day1.rs"

[[bin]]
name = "day2" 
path = "bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "bin/day3/day3.rs"

[[bin]]
name = "day4"
path = "bin/day4/day4.rs"

[[bin]]
name = "day5"
path = "bin/day5/day5.rs"

[[bin]]
name = "day6"
path = "bin/day6/day6.rs"

[[bin]]
name = "day7"
path = "bin/day7/day7.rs"

[[bin]]
name = "day8"
path = "bin/day8/day8.rs"

[[bin]]
name = "day9"
path = "bin/day9/day9.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rayon = "1.8.0"
